Archive/f01b5731362d139ff76d0b8105d1a83e-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:35:21: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T> struct holder’
     holder<style_a_x>(69);
                     ^
main.cpp:35:21: error:   expected a type, got ‘style_a_x’
